# Cuis-Smalltalk-Darwin

./: .exrc  .gitignore  Animation.pck.st  Bidi.pck.st  BidiString.pck.st  Brocade.pck.st  BrocadePlanner.pck.st  BrocadeScheduler.pck.st  CUA.pck.st  College.pck.st  Darwin.pck.st  GDL.xray  Genie.xray  Make.common  Makefile  MenuBar.pck.st  Navigator.pck.st  ParametricPathText.pck.st  Plot.pck.st  PluggableBrowsing.pck.st  README.md  SpriteAtlas.pck.st  Table.pck.st  Tavor.pck.st  TestPlan.txt  UndoRedo.pck.st  attribute_layout.cc  attribute_layout.h  bits.genie  breed.cc  breed.h  chromo.cc  chromo.h  chromosome_to_instance.h  college.gdl  college.genie  crossover.cc  crossover.h  dependencies  exprand.cc  (+34 more)
UserChanges/: Cuis7.1-6668-Darwin-12-9-24.user.001.changes  Cuis7.1-6668-Darwin-12-9-24.user.changes  Cuis7.1-6668-Genie-15-09-24.user.001.changes  Cuis7.1-6668-Genie-15-09-24.user.002.changes  Cuis7.1-6668-Genie-15-09-24.user.changes  Cuis7.1-6668.user.001.changes  Cuis7.1-6668.user.changes
debug/: Makefile
examples/: plan.genief  school.genie  seplan.genief  seschool.genie  short.genie  short.genief
genie/: Makefile.am  configure.ac
genie/src/: Makefile.am  attribute_layout.cc  breed.cc  chromo.cc  crossover.cc  fitness.cc  fitness_library.cc  fitness_library.h  genie.cc  genie_functions.cc  genie_tables.cc  genie_types.h  image.cc  interval.cc  interval.h  invert.cc  mutate.cc  mutate.h  random_number_generator.h  report.cc  setup.cc
gnuplot/: plot-progress.gpl
opendoc/: content.xml  meta.xml  styles.xml
openmp/: Makefile
profile/: Makefile
(+55 files in other folders)
