
AM_CXXFLAGS = -I$(top_builddir)/lib -I$(top_srcdir)/lib 

LDADD = $(top_builddir)/lib/libgnu.a

bin_PROGRAMS = genie

genie_SOURCES = genie.cc attribute_layout.cc breed.cc chromo.cc crossover.cc fitness.cc genie_functions.cc genie_tables.cc image.cc interval.cc invert.cc mutate.cc report.cc setup.cc
